--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,53 +1,82 @@
 :root {
-    --primary: #ccdad1;
-    --secondary: #9caea9;
-    --tertiary: #788585;
-    --light-dark: blue;
-    --dark: #38302e;
-    --border-radius: .3rem;
-  }
-
-h1{
-    height: 50px; 
-    background-color: blue;
-    text-align: center;
-    color: white;
+  --primary: #ccdad1;
+  --secondary: #9caea9;
+  --tertiary: #788585;
+  --light-dark: blue;
+  --dark: #38302e;
+  --border-radius: 0.3rem;
 }
-body{
-    background-color: lemonchiffon;
+#header{
+  height: 50px;
+  background-color: blue;
+  text-align: center;
+  color: white;
 }
-
+body {
+  background-color: beige;
+}
 .btn {
-    font-size: 1.3rem;
-    text-decoration:none;
-    padding: 6px 25px;    
-    width: 20%;
-    height: 50px;
-    display: block;
-    margin: 25px 0px;
-    border-radius: var(--border-radius);
-    color: var(--primary);
-    border: none;
-    outline: none;
-    background-color: var(--light-dark);
-    box-shadow: 3px 3px var(--dark);
-    transform: translate(-1px, -1px);
-  }
-
-.card-header{
+  font-size: 18px;
+  text-decoration: none;
+  padding: 6px 25px 10px 20px; 
+  width: 90%;
+  height: 50px; 
+  display: block;
+  margin: 25px 10px 20px 20px;
+  border-radius: 10px;
+  color: black;  
+  box-shadow: 3px 3px var(--dark);
+  transform: translate(-1px, -1px);
+}
+#search{
+  font-size: 18px;
+  background-color: skyblue;
+}
+.card-header {
   font-size: 25px;
+  text-align: center;
   padding: 10px 0px 0px 0px;
-  }
-#city{
-    width: 20%;
-    height: 30px;
-    margin: 0;
+}
+#city {
+  width: 300px;
+  height: 40px;
+  margin: 0;
+  border-radius: 5px;
+  font-size: 20px;
+}
+.weather-conditions {
+  margin-top: 20px;
+}
+.display-weather-conditions{
+  width: 80%;
 }
 
-.card-header {
-    color: black;   
-    width: 20%;
- }
-  
-  .card-body {
-     }
+/* footer Styling */
+.footer {
+  padding: 30px;
+  clear: both;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  text-align: center;
+}
+
+.footer h2 {
+  font-size: 20px;
+}
+.city-name {
+    width: 88%;
+    border: 5px solid gray;
+    background-color: slategrey;
+    border-radius: 5px;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 40px 40px 50px;
+}
+.hide{
+  display: none;
+}
+.show{
+  display: block;
+}
