--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
   text-align: center;
   color: white;
 }
-body {
+.body {
   background-color: wheat;
 }
 .btn {
@@ -49,7 +49,7 @@ body {
   font-size: 20px;
 }
 .weather-conditions {
-  margin-top: 20px;
+  margin-top: 5px;
 }
 #todays-weather {
   background-color: silver;
