--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@
 }
 #todays-weather {
   background-color: silver;
-  width: 1090px;
+  width: 1050px;
   height: 290px;
   padding: 20px;
   margin-top: 20px;
@@ -65,10 +65,11 @@
 }
 .five-day-forecast {
   background-color: darkslateblue;
-  width: 180px;
-  height: 170px;
+  width: 170px;
+  height: 260px;
   padding: 5px;
   margin-top: 10px;
+  margin-bottom: 100px;
 }
 .display-weather-conditions {
   width: 80%;
@@ -82,7 +83,7 @@
 }
 .each-day-date {
   color: white;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
 }
 /* footer Styling */
